--- a/package.json
+++ b/package.json
@@ -13,19 +13,20 @@
   },
   "author": "wwwriterrr",
   "license": "ISC",
-  "engines" : { 
-    "npm" : "^10.0.0",
-    "node" : "^20.0.0"
+  "engines": {
+    "npm": "^10.0.0",
+    "node": "^20.0.0"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.19",
     "express": "^4.19.2",
     "gulp": "^5.0.0",
     "gulp-postcss": "^10.0.0",
-    "autoprefixer": "^10.4.19",
+    "handlebars": "^4.7.8",
+    "lodash": "^4.17.21",
     "postcss-import": "^16.1.0",
     "postcss-nesting": "^12.1.1",
     "precss": "^4.0.0",
-    "handlebars": "^4.7.8",
     "typescript": "^5.4.3",
     "vite": "^5.2.7",
     "vite-express": "^0.16.0",
