--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,11 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+
+    "noImplicitAny": true,
+    "sourceMap": true,
+    "strictNullChecks": true,
   },
   "include": ["src"]
 }
