--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,5 +23,12 @@
     "sourceMap": true,
     "strictNullChecks": true,
   },
-  "include": ["src"]
+  /* "include": ["src"], */
+  "ts-node": {
+    "esm": true,
+    "experimentalSpecifierResolution": "node",
+    "transpileOnly": true
+  },
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules"]
 }
