--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "npm run prebuild && npx vite build",
     "linting": "npx eslint .",
     "preview": "npx vite preview",
-    "start": "npx vite build && npx vite --host"
+    "start": "npx vite build && npx vite --host",
+    "test": "mocha"
   },
   "author": "wwwriterrr",
   "license": "ISC",
@@ -34,9 +35,18 @@
     "vite-plugin-handlebars": "^2.0.0"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.16",
     "@types/lodash": "^4.17.0",
+    "@types/mocha": "^10.0.6",
+    "@types/node": "^20.12.12",
+    "@types/sinon": "^17.0.3",
+    "chai": "^5.1.1",
     "cssnext": "^0.0.0",
     "eslint": "^9.1.0",
-    "stylelint": "^16.3.1"
+    "jsdom": "^24.0.0",
+    "mocha": "^10.4.0",
+    "sinon": "^18.0.0",
+    "stylelint": "^16.3.1",
+    "ts-node": "^10.9.2"
   }
 }
