--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
     "npm": "^10.0.0",
     "node": "^20.0.0"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm-run-all test lint:all"
+    }
+  },
   "dependencies": {
     "autoprefixer": "^10.4.19",
     "express": "^4.19.2",
@@ -43,6 +48,7 @@
     "chai": "^5.1.1",
     "cssnext": "^0.0.0",
     "eslint": "^9.1.0",
+    "husky": "^9.0.11",
     "jsdom": "^24.0.0",
     "mocha": "^10.4.0",
     "sinon": "^18.0.0",
