--- a/netlify.toml
+++ b/netlify.toml
@@ -14,6 +14,11 @@
     from = "/src/assets/img/*"
     to = "/:splat"
 
+[[redirects]]
+    from = "/*"
+    to = "/"
+    force = true
+
 #[context.production]
 #  publish = "dist/"
 #  command = "npm run dev"
