Netlify conf Cimmit on sprint 4

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,17 +2,17 @@
     publish = "dist/"
     command = "npx vite build"
 
-[[redirects]]
-    from = "/public/wm.svg"
-    to = "/wm.svg"
+#[[redirects]]
+#    from = "/public/wm.svg"
+#    to = "/wm.svg"
 
-[[redirects]]
-    from = "/public/*"
-    to = "/:splat"
+#[[redirects]]
+#    from = "/public/*"
+#    to = "/:splat"
 
-[[redirects]]
-    from = "/src/assets/img/*"
-    to = "/:splat"
+#[[redirects]]
+#    from = "/src/assets/img/*"
+#    to = "/:splat"
 
 [[redirects]]
     from = "/*"
