--- a/netlify.toml
+++ b/netlify.toml
@@ -14,10 +14,9 @@
 #    from = "/src/assets/img/*"
 #    to = "/:splat"
 
-[[redirects]]
-    from = "/*"
-    to = "/"
-    force = true
+#[[redirects]]
+#    from = "/*"
+#    to = "/"
 
 #[context.production]
 #  publish = "dist/"
