--- a/netlify.toml
+++ b/netlify.toml
@@ -14,9 +14,10 @@
 #    from = "/src/assets/img/*"
 #    to = "/:splat"
 
-#[[redirects]]
-#    from = "/*"
-#    to = "/"
+[[redirects]]
+    from = "/*"
+    to = "/"
+    status = 200
 
 #[context.production]
 #  publish = "dist/"
