--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "prebuild": "tsc --noEmit",
     "build": "npm run prebuild && npx vite build",
     "linting": "npx eslint .",
+    "stylelinting": "npx stylelint \"**/*.css\"",
     "preview": "npx vite preview",
     "start": "npx vite build && npx vite --host",
     "test": "mocha"
@@ -21,18 +22,14 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm-run-all test lint:all"
+      "pre-commit": "npm-run-all test linting stylelinting"
     }
   },
   "dependencies": {
-    "autoprefixer": "^10.4.19",
     "express": "^4.19.2",
     "gulp": "^5.0.0",
-    "gulp-postcss": "^10.0.0",
     "handlebars": "^4.7.8",
     "lodash": "^4.17.21",
-    "postcss-import": "^16.1.0",
-    "postcss-nesting": "^12.1.1",
     "precss": "^4.0.0",
     "typescript": "^5.4.3",
     "vite": "^5.2.7",
@@ -45,14 +42,22 @@
     "@types/mocha": "^10.0.6",
     "@types/node": "^20.12.12",
     "@types/sinon": "^17.0.3",
+    "autoprefixer": "^10.4.19",
     "chai": "^5.1.1",
+    "css-blank-pseudo": "^6.0.2",
     "cssnext": "^0.0.0",
     "eslint": "^9.1.0",
+    "gulp-postcss": "^10.0.0",
     "husky": "^9.0.11",
     "jsdom": "^24.0.0",
     "mocha": "^10.4.0",
+    "postcss": "^8.4.38",
+    "postcss-import": "^16.1.0",
+    "postcss-nesting": "^12.1.5",
+    "postcss-selector-not": "^7.0.2",
     "sinon": "^18.0.0",
     "stylelint": "^16.3.1",
+    "stylelint-config-standard": "^36.0.0",
     "ts-node": "^10.9.2"
   }
 }
